<resources>

    <string name="google_maps_key" translatable="false">AIzaSyDzBuys0gKQmHewrgLlJYbEhD1nLWvIYX8</string>

    <string name="app_name" translatable="false">खिरगव्हाण ग्राम पंचायत</string>

    <string name="noInternet">Please check your internet connection and try again</string>
    <string name="action_settings">Setting</string>
    <string name="noData">No data found</string>
    <string name="grievance_id">Grievance ID</string>

    <string name="title_activity_ghanta_gadi_tracker">Tracker for Garbage Collection Van</string>
    <string name="title_activity_cleaning_complaint">Cleanliness Grievance</string>
    <string name="title_activity_complaint_status">My Grievance Status</string>
    <string name="title_activity_registration">Registration</string>

    <string name="contact_no_txt">"Contact No. : "</string>
    <string name="search_area_txt">Search Area</string>
    <string name="logout_txt">Logout</string>

    <string name="no_ghanta_gadi">No garbage van available</string>
    <string name="something_error">Something went wrong!! Please try again later.</string>
    <string name="invalid_url_error">Invalid URL</string>
    <string name="invalid_qr_error">Invalid Scaniffy</string>

    <string name="yes_txt">Yes</string>
    <string name="no_txt">No</string>

    <string name="update_txt" translatable="false">UPDATE</string>
    <string name="no_thanks_txt" translatable="false">NO, THANKS</string>
    <string name="update_title" translatable="false">New Version Available</string>
    <string name="update_message" translatable="false">Please, update app to new version.</string>

    <string name="ward_no_comp">Ward No *</string>
    <string name="place_comp">Location *</string>
    <string name="select_type">Select Grievance Type *</string>
    <string name="compleant_details">Grievance / Feedback Info *</string>
    <string name="tip">tips</string>
    <string name="personal_information">Personal Information :</string>
    <string name="name_comp">Name *</string>
    <string name="mobile_no_comp">Mobile No *</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>

    <string name="plz_capture_img">Please capture image</string>
    <string name="plz_ent_ward_no">Please enter ward no</string>
    <string name="plz_ent_location">Please enter location</string>
    <string name="plz_ent_complent_dtl">Please enter grievance details</string>
    <string name="plz_select_complaint_type">Please select grievance type</string>
    <string name="plz_ent_name">Please enter name</string>
    <string name="plz_ent_mobile_no">Please enter mobile number</string>
    <string name="plz_ent_valid_mobile_no">Please enter valid mobile number</string>
    <string name="plz_ent_valid_email">Please enter valid email</string>
    <string name="submit_done">Submited</string>
    <string name="serverError">Oops! We\\\'re having technical problems. Please try again later.</string>
    <string name="submit_error">Unable to submit. Please try again later</string>

    <string name="pending">Pending</string>
    <string name="processing">Processing</string>
    <string name="resolved">Resolved</string>
    <string name="rejected">Rejected</string>

    <string name="date">Date</string>
    <string name="grievance">Grievance</string>
    <string name="comments">Comments</string>
    <string name="before">Before</string>
    <string name="after">After</string>
    <string name="details">Details</string>
    <string name="place">Location</string>
    <string name="ward_no">Ward No.</string>

    <string name="house_number_hint">Enter house number</string>
    <string name="house_number_hint_valid">Enter valid house number</string>
    <string name="otp_hint">Enter OTP</string>
    <string name="otp_hint_valid">Enter valid OTP</string>
    <string name="txt_resend_otp">Resend OTP</string>
    <string name="confirm_contact_hint">Confirm Contact Number</string>
    <string name="text_edit_contact">Update contact details</string>

    <string name="action_change_language">Change Language</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="title_activity_league_questions">SS League 2021</string>

    <string name="title_infotainment">Infotainment</string>
    <string name="title_activity_notification_list">Notifications</string>
    <string name="no_notifications_text">No Notifications</string>
    <string name="clear_all" translatable="false">Clear All</string>

    <string name="answer_all_question">Please answer all the questions</string>
    <string name="title_activity_city_pee">CT/PT Scanify</string>
    <string name="title_activity_city_pee_map">CT/PT on Map</string>
    <string name="skip_text">Skip</string>
    <string name="prompt_qr">Kindly Scan Scanify Code</string>

    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_collection_history">Garbage Collection History</string>
    <string name="month_txt">Month</string>
    <string name="select_month_year_warn">Please Select Proper Month / Year</string>

    <string name="bifurcate_garbage">Bifurcated</string>
    <string name="mixed_garbage">Mixed</string>
    <string name="no_garbage">Not Received</string>
    <string name="not_specified_garbage">Not Specified</string>

    <string name="vehicle_number_txt">Vehicle No :</string>

    <string name="sba_game_infotainment">Infotainment</string>

</resources>