<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ghanta_gadi_tracker"
            android:title="@string/title_activity_ghanta_gadi_tracker"
            android:checked="true"/>
        <item
            android:id="@+id/nav_complaint_cleaning"
            android:title="@string/title_activity_cleaning_complaint"
            android:checkable="false"
            android:visible="false"/>
        <item
            android:id="@+id/nav_complaint_status"
            android:title="@string/title_activity_complaint_status"
            android:checkable="false"
            android:visible="false"/>

        <item
            android:id="@+id/nav_league"
            android:title="@string/title_activity_league_questions"
            android:checkable="false"/>

        <item
            android:id="@+id/nav_notification"
            android:title="@string/title_activity_notification_list"
            android:checkable="false"/>

        <item
            android:id="@+id/nav_setting"
            android:title="@string/action_settings"
            android:checkable="false"/>

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout_txt"
            android:checkable="false"/>

    </group>

</menu>
