<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.RegistrationActivity"
    tools:showIn="@layout/activity_registration"
    android:orientation="vertical"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_margin="@dimen/fab_margin"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/MyTextInputLayoutStyle"
            android:layout_marginTop="@dimen/margin_top_registration_input"
            android:layout_gravity="center_horizontal">

            <EditText
                android:id="@+id/ip_otp"
                style="@style/MyEditTextStyle"
                android:hint="@string/otp_hint"
                android:inputType="number"
                android:maxLength="4"
                android:textSize="30sp"
                android:gravity="center_horizontal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_resend_otp"
            android:textColor="@color/gray"
            android:background="@drawable/round_button_border_gray"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/fab_margin"/>

    </LinearLayout>

    <ImageButton
        android:contentDescription="@string/submit"
        android:id="@+id/btn_submit_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/fab_margin"
        android:background="@drawable/rounded_background_search"
        android:src="@drawable/ic_keyboard_arrow_right" />

</LinearLayout>