<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.CleaningStatusDetailsActivity"
    tools:showIn="@layout/activity_cleaning_status_details"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        style="@style/MyCardView"
        android:layout_margin="@dimen/padding_margin_layout_double"
        app:cardBackgroundColor="@color/card_view_background_color"
        app:cardCornerRadius="@dimen/cardview_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_margin_layout_double"
                android:layout_marginRight="@dimen/padding_margin_layout_double"
                android:layout_marginTop="@dimen/padding_margin_layout_double"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/complent_details_refrence_id_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color_primary"
                        android:textSize="@dimen/primery_text_size"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right">

                        <TextView
                            android:id="@+id/complent_details_status_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_background"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/primery_text_size"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/complent_details_date_id_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_margin_layout_double"
                    android:textSize="@dimen/primery_text_size" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/layout_background_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_margin_layout_double"
                android:layout_marginLeft="@dimen/padding_margin_layout_double"
                android:layout_marginRight="@dimen/padding_margin_layout_double"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/complent_details_ward_no_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_margin_layout_double"
                    android:layout_marginTop="@dimen/padding_margin_layout_double"
                    android:textColor="@color/text_color_primary"
                    android:textSize="@dimen/primery_text_size" />

                <TextView
                    android:id="@+id/complent_details_location_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color_primary"
                    android:textSize="@dimen/primery_text_size" />

                <TextView
                    android:id="@+id/complent_details_complaint_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_margin_layout_double"
                    android:layout_marginTop="@dimen/padding_margin_layout_double"
                    android:textColor="@color/text_color_primary"
                    android:textSize="@dimen/primery_text_size" />

                <TextView
                    android:id="@+id/complent_details_tips_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_margin_layout_double"
                    android:textColor="@color/text_color_primary"
                    android:textSize="@dimen/primery_text_size" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_margin_layout_double"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <ImageView
                        android:id="@+id/start_iv"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginRight="@dimen/padding_margin_layout"
                        android:layout_weight="5"
                        android:scaleType="fitXY" />

                    <ImageView
                        android:id="@+id/end_iv"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginLeft="@dimen/padding_margin_layout"
                        android:layout_weight="5"
                        android:scaleType="fitXY" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_margin_layout_double"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/padding_margin_layout"
                        android:layout_weight="5"
                        android:gravity="center"
                        android:text="@string/before"
                        android:textColor="@color/text_color_primary"
                        android:textSize="@dimen/primery_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_margin_layout"
                        android:layout_weight="5"
                        android:gravity="center"
                        android:text="@string/after"
                        android:textColor="@color/text_color_primary"
                        android:textSize="@dimen/primery_text_size"
                        android:textStyle="bold" />

                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/comments"
                    android:textColor="@color/text_color_primary"
                    android:textSize="@dimen/primery_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/complent_details_comment_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_margin_layout_double"
                    android:layout_marginTop="@dimen/padding_margin_layout"
                    android:textSize="@dimen/primery_text_size" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>